privay policy update

--- a/components/header.html
+++ b/components/header.html
@@ -46,7 +46,7 @@
 
         <!-- Roadmap / Upcoming Features -->
         <li class="nav-item">
-          <a class="nav-link" href="roadmap.html">Upcoming Features</a>
+          <a class="nav-link" href="roadmap.html">Mobile App</a>
         </li>
       </ul>
     </div>
